Fix footer alignment and use flex

--- a/css/main.scss
+++ b/css/main.scss
@@ -108,6 +108,7 @@ body {
   padding: 0 10px;
   margin-left: 1em;
   margin-right: 1em;
+  min-height: 100vh;
 }
 
 h1 {
@@ -139,7 +140,8 @@ nav,
 article,
 aside,
 figure {
-  display: block;
+  display: flex;
+  flex-direction: column;
   width: 100%;
 }
 
@@ -205,7 +207,7 @@ h3 {
 }
 
 .description {
-  font-size: 2rem;
+  font-size: 1.8rem;
   line-height: 3rem;
   text-align: center;
 }
@@ -245,10 +247,19 @@ body > footer {
   font-size: 0.8em;
   text-align: center;
   margin: 3em auto;
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 2.5rem;
+  // position: absolute;
+  // bottom: 0;
+  // width: 100%;
+  // height: 2.5rem;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+}
+
+article {
+  flex: 1;
 }
 
 @media all and (max-width: 660px) {
